<resources>
    <string name="app_name">My Application</string>
    <string name="home">Home</string>
    <string name="add_post">Add Post</string>
    <string name="settings">Settings</string>
    <string name="add_new_post">Add New Post</string>
    <string name="upload">Upload</string>
    <string name="reset">Reset</string>
    <string name="type">Type</string>
    <string name="breed">Breed</string>
    <string name="gender">Gender</string>
    <string name="vaccinated">Vaccinated</string>
    <string name="description">Description</string>
    <string name="pet_view">Pet View</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>


    <string-array name="pet_types">
        <item>Cat</item>
        <item>Dog</item>
    </string-array>

    <string-array name="cat_breeds">
        <item>Himalayan</item>
        <item>Persian</item>
        <item>Siamese</item>
        <item>Siberian</item>
        <item>Shorthair</item>
        <item>Sphynx</item>
        <item>Other</item>
    </string-array>

    <string-array name="dog_breeds">
        <item>Beagle</item>
        <item>BullDog</item>
        <item>Chihuahua</item>
        <item>German Shepard</item>
        <item>Golden Retriever</item>
        <item>Husky</item>
        <item>Pomeranian</item>m
        <item>Poodle</item>
        <item>Pug</item>
        <item>Other</item>
    </string-array>

    <string-array name="all_breeds">
        <item>Himalayan</item>
        <item>Persian</item>
        <item>Siamese</item>
        <item>Siberian</item>
        <item>Shorthair</item>
        <item>Sphynx</item>
        <item>Beagle</item>
        <item>BullDog</item>
        <item>Chihuahua</item>
        <item>German Shepard</item>
        <item>Golden Retriever</item>
        <item>Husky</item>
        <item>Pomeranian</item>m
        <item>Poodle</item>
        <item>Pug</item>
        <item>Other</item>
    </string-array>

    <string-array name="cities">
        <item>Cairo</item>
        <item>Alexandria</item>
        <item>North Coast</item>
        <item>El Gharbeyah</item>
        <item>El Shaariyah</item>
        <item>Other</item>
    </string-array>

    <string-array name="cairo_areas">
        <item>Al-Rehab</item>
        <item>Al-Obour</item>
        <item>Al-Shorooq</item>
        <item>Dokki</item>
        <item>Downtown</item>
        <item>Garden City</item>
        <item>Haram</item>
        <item>Heliopolis</item>
        <item>Maadi</item>
        <item>Madinty</item>
        <item>Nasr City</item>
        <item>New Cairo</item>
        <item>Mohandseen</item>
        <item>Sheraton</item>
        <item>Zamalek</item>
        <item>6th of October</item>
        <item>Other</item>
    </string-array>

    <string-array name="other_areas">
        <item>N/A</item>
    </string-array>

    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_user_test">UserTestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="listings">Listings</string>
    <string name="likes">Likes</string>
    <string name="messages">Messages</string>
    <string name="logout">Logout</string>
    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="no_posts_to_show">No posts to show...</string>
    <string name="editpost">EditPost</string>


</resources>
