<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:icon="@drawable/likes"
            android:title="@string/likes"
            android:id="@+id/nav_likes"/>
        <item
            android:icon="@drawable/messages"
            android:title="@string/messages"
            android:id="@+id/nav_messages"/>
        <item
            android:icon="@drawable/settings"
            android:title="Account"
            android:id="@+id/nav_account"/>
        <item
            android:icon="@drawable/help"
            android:title="Help"
            android:id="@+id/nav_help"/>
        <item
            android:icon="@drawable/logout"
            android:title="@string/logout"
            android:id="@+id/nav_logout"/>
    </group>
</menu>